@@ -70,6 +70,8 @@ public:
 
 	bool isWritable(unsigned int columnIndex);
 
+	bool isZerofill(unsigned int columnIndex);
+
 private:
 	/* Prevent use of these */
 	MySQL_ResultSetMetaData(const MySQL_ResultSetMetaData &);
